// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sliderField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
        data-options="false"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n46v"
        >
          <div
            class="uv_xf61n40 uv_xf61n42j uv_xf61n46p"
          >
            <span
              class="uv_a5ifr1e uv_a5ifr1f uv_a5ifr1h uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsk uv_1do42ls1a uv_1do42ls32"
              data-testid="slider-value"
              style="--uv_1giziax0: right;"
            >
              0
            </span>
          </div>
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n461"
            style="--uv_1d8tbmb0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_a5ifr1l uv_a5ifr1m uv_a5ifr1b uv_a5ifr1c"
              data-direction="column"
              data-error="false"
              id="_r_1_"
              max="100"
              min="0"
              name="test"
              step="1"
              style="--uv_a5ifr12: calc(0% - 0px); --uv_a5ifr11: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="Slider Input"
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
        data-options="false"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n46v"
        >
          <div
            class="uv_xf61n40 uv_xf61n42j uv_xf61n46p"
          >
            <span
              class="uv_a5ifr1e uv_a5ifr1f uv_a5ifr1h uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsk uv_1do42ls1a uv_1do42ls32"
              data-testid="slider-value"
              style="--uv_1giziax0: right;"
            >
              0
            </span>
          </div>
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n461"
            style="--uv_1d8tbmb0: 100%;"
          >
            <input
              aria-disabled="true"
              aria-label="Slider Input"
              class="uv_a5ifr1l uv_a5ifr1m uv_a5ifr1p uv_a5ifr1b uv_a5ifr1d"
              data-direction="column"
              data-error="false"
              disabled=""
              id="_r_1l_"
              max="100"
              min="0"
              name="test"
              step="1"
              style="--uv_a5ifr12: calc(0% - 0px); --uv_a5ifr11: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n441"
        data-options="true"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n46v"
        >
          <div
            class="uv_xf61n40 uv_xf61n42j uv_xf61n46p"
          >
            <span
              class="uv_a5ifr1e uv_a5ifr1f uv_a5ifr1h uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsk uv_1do42ls1a uv_1do42ls32"
              data-testid="slider-value"
              style="--uv_1giziax0: right;"
            >
              1
            </span>
          </div>
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n461"
            style="--uv_1d8tbmb0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_a5ifr1l uv_a5ifr1m uv_a5ifr1b uv_a5ifr1c"
              data-direction="column"
              data-error="false"
              id="_r_7_"
              max="6"
              min="0"
              name="test"
              step="1"
              style="--uv_a5ifr12: calc(0% - 0px); --uv_a5ifr11: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
            <datalist
              class="uv_a5ifr16"
              data-double="false"
            >
              <span
                class="uv_a5ifr18 uv_a5ifr19"
                data-element-left="true"
                data-element-right="false"
                data-value="0"
                style="--uv_a5ifr13: calc(0% - 0px + 8px);"
              >
                <p
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                >
                  1Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="1"
                style="--uv_a5ifr13: calc(16.666666666666668% - 2.666666666666667px + 8px);"
              >
                <p
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                >
                  3Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="2"
                style="--uv_a5ifr13: calc(33.333333333333336% - 5.333333333333334px + 8px);"
              >
                <p
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                >
                  5Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="3"
                style="--uv_a5ifr13: calc(50% - 8px + 8px);"
              >
                <p
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                >
                  10Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="4"
                style="--uv_a5ifr13: calc(66.66666666666667% - 10.666666666666668px + 8px);"
              >
                <p
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                >
                  50Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="5"
                style="--uv_a5ifr13: calc(83.33333333333333% - 13.333333333333332px + 8px);"
              >
                <p
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                >
                  100Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18 uv_a5ifr1a"
                data-element-left="false"
                data-element-right="true"
                data-value="6"
                style="--uv_a5ifr13: calc(100% - 16px + 8px);"
              >
                <p
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                >
                  500Mb
                </p>
              </span>
            </datalist>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values and double 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_a5ifr14 uv_xf61n40 uv_xf61n42d uv_xf61n441"
        data-double="true"
        data-options="true"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n46v"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
            style="--uv_1d8tbmb0: 100%;"
          >
            <div
              class="uv_xf61n40 uv_xf61n42j uv_xf61n477"
            >
              <span
                class="uv_a5ifr1e uv_a5ifr1g uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsk uv_1do42ls1a uv_1do42ls32"
                data-testid="value-left"
                style="--uv_1giziax0: right;"
              >
                1
              </span>
              <span
                class="uv_a5ifr1e uv_a5ifr1g uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsk uv_1do42ls1a uv_1do42ls32"
                data-testid="value-right"
                style="--uv_1giziax0: right;"
              >
                500
              </span>
            </div>
            <div
              class="uv_a5ifr1r"
            >
              <div
                class="uv_a5ifr1s"
              >
                <div
                  aria-disabled="false"
                  class="uv_a5ifr1t"
                  data-error="false"
                  style="left: 0%; right: 0%;"
                />
              </div>
              <input
                aria-label="test"
                class="uv_a5ifr1i uv_a5ifr1j uv_a5ifr1b uv_a5ifr1c"
                data-direction="column"
                data-testid="handle-left"
                id="_r_r_"
                max="6"
                min="0"
                name="test"
                step="1"
                style="--uv_a5ifr12: calc(0% - 0px); --uv_a5ifr11: #ffffff;"
                type="range"
                value="0"
              />
              <input
                aria-label="test"
                class="uv_a5ifr1i uv_a5ifr1j uv_a5ifr1b uv_a5ifr1c"
                data-direction="column"
                data-testid="handle-right"
                id="_r_r_"
                max="6"
                min="0"
                name="test"
                step="1"
                style="--uv_a5ifr12: calc(100% - 16px); --uv_a5ifr11: #ffffff;"
                type="range"
                value="6"
              />
              <datalist
                class="uv_a5ifr16 uv_a5ifr17"
                data-double="true"
              >
                <span
                  class="uv_a5ifr18 uv_a5ifr19"
                  data-element-left="true"
                  data-element-right="false"
                  data-value="0"
                  style="--uv_a5ifr13: calc(0% - 0px + 8px);"
                >
                  <p
                    class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsc uv_1do42lst uv_1do42ls1a uv_1do42ls2e"
                  >
                    1Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="1"
                  style="--uv_a5ifr13: calc(16.666666666666668% - 2.666666666666667px + 8px);"
                >
                  <p
                    class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                  >
                    3Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="2"
                  style="--uv_a5ifr13: calc(33.333333333333336% - 5.333333333333334px + 8px);"
                >
                  <p
                    class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                  >
                    5Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="3"
                  style="--uv_a5ifr13: calc(50% - 8px + 8px);"
                >
                  <p
                    class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                  >
                    10Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="4"
                  style="--uv_a5ifr13: calc(66.66666666666667% - 10.666666666666668px + 8px);"
                >
                  <p
                    class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                  >
                    50Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="5"
                  style="--uv_a5ifr13: calc(83.33333333333333% - 13.333333333333332px + 8px);"
                >
                  <p
                    class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                  >
                    100Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18 uv_a5ifr1a"
                  data-element-left="false"
                  data-element-right="true"
                  data-value="6"
                  style="--uv_a5ifr13: calc(100% - 16px + 8px);"
                >
                  <p
                    class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsc uv_1do42lst uv_1do42ls1a uv_1do42ls2e"
                  >
                    500Mb
                  </p>
                </span>
              </datalist>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
        data-options="false"
      >
        <div
          class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n46v"
        >
          <div
            class="uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n477"
          >
            <div
              class="uv_xf61n40 uv_xf61n4v uv_xf61n42j uv_xf61n45j"
            >
              <label
                class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
                for="_r_1r_"
              >
                Test
              </label>
              <span
                class="uv_1do42ls0 uv_1do42ls4 uv_1do42ls9 uv_1do42lsn uv_1do42ls1a uv_1do42ls2m"
              >
                *
              </span>
            </div>
            <div
              class="uv_a5ifr1w uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <div>
                <div
                  class="uv_1ce7gb6k uv_1ce7gb6n uv_1ce7gb6o"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-size="small"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="uv_1ce7gb63 uv_1ce7gb64 uv_1w3vbem0 uv_1w3vbemd uv_1w3vbem61"
                    style="--uv_85qyp70: 1fr auto; --uv_85qyp71: 1fr auto; --uv_85qyp72: 1fr auto; --uv_85qyp73: 1fr auto; --uv_85qyp74: 1fr auto; --uv_85qyp75: 1fr auto;"
                  >
                    <input
                      aria-label="input"
                      class="uv_1ce7gb6c uv_1ce7gb6d uv_1ce7gb6i uv_1ce7gb6j"
                      data-testid="slider-input"
                      id="_r_20_"
                      inputmode="numeric"
                      max="10"
                      min="0"
                      placeholder=""
                      step="1"
                      type="number"
                      value="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="uv_xf61n40 uv_xf61n42j uv_xf61n46p"
          />
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n43p uv_xf61n461"
            style="--uv_1d8tbmb0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_a5ifr1l uv_a5ifr1m uv_a5ifr1b uv_a5ifr1c"
              data-direction="column"
              data-error="false"
              id="_r_1r_"
              max="10"
              min="0"
              name="test"
              step="1"
              style="--uv_a5ifr12: calc(0% - 0px); --uv_a5ifr11: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
